# RaspiKey

./: README.md  build.ps1
keymaps/: usb_hid_keys.h
raspikey/: .gitignore  A1314.cpp  A1314.h  A1644.cpp  A1644.h  CMakeLists.txt  GenericReportFilter.cpp  GenericReportFilter.h  Globals.cpp  Globals.h  HttpApiServer.cpp  HttpApiServer.h  KeyMapReportFilter.cpp  Logger.h  Main.cpp  Main.h  README.md  ReportFilter.h  WebApiServer.cpp  WebApiServer.h  configure.sh  crow_all.h  toolchain-rpi0.cmake  toolchain.cmake
raspikey/.tasks/: pack.sh
raspikey/bluetooth/: agent.cpp  bt.cpp
raspikey/gdbus/: README.md  client.c
raspikey/setup/: start.sh
raspikey/setup/raspikey/: .gitignore  raspikey.service  raspikey_usb  raspikey_usb.service  readonly-convert.sh  setup.sh
raspikey/setup/setup/: raspikey_usb  setup.sh
raspikey/ui/: .env  .env.development  .gitignore  git-version.js  package.json
raspikey/ui/src/: App.vue  util.js
raspikey/ui/src/components/: DeviceCard.vue
scripts/: make-raspios-headless.sh
